--- a/examples/rconv/CMakeLists.txt
+++ b/examples/rconv/CMakeLists.txt
@@ -20,7 +20,7 @@ project ( rconv ${_lang_add} ${_lang_base} )
 set ( _stem fftx )
 set ( _prefixes rconv3 )	##  prefixes only required for test${PROJECT_NAME}
 
-set (         BUILD_PROGS test${PROJECT_NAME}_lib )
+##set (         BUILD_PROGS test${PROJECT_NAME}_lib )
 list ( APPEND BUILD_PROGS test${PROJECT_NAME} )
 
 ##  One .cpp file is coded with device_macros and should build for CUDA & HIP
